# protobot

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  readme.md  script.as
build-tools/: event_generator.py
cmake/modules/: FindDPP.cmake  FindSpdLog.cmake
data/: run.sh
data/config/: config.sample.json
libprotobot/: client.cpp  config.cpp  database.cpp  module.cpp
libprotobot/angelscript/: scriptarray.cpp  scriptbuilder.cpp  scriptstdstring.cpp  scriptstdstring_utils.cpp
libprotobot/include/protobot/: client.h  config.h  database.h  events.h  module.h  protobot.h  string_utils.h
libprotobot/include/protobot/ddl/: bot_options.h
modules/: CMakeLists.txt
modules/test_module/: CMakeLists.txt
modules/test_module/src/: test_module.cpp  test_module.h
modules/test_module_2/src/: test_module_2.cpp  test_module_2.h
sql/: bot_options.sql
src/: main.cpp
